--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "main": "eslint.config.js",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
