--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,6 +2,10 @@
   "name": "server",
   "version": "0.0.0",
   "private": true,
+  "workspaces": [
+    "Frontend",
+    "Backend"
+  ],
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "license": "ISC",
   "author": "Khushal",
