final fullstack setup

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,7 @@
   "main": "eslint.config.js",
   "scripts": {
     "start": "vite",
-    "build": "vite build",
+    "build": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview",
     "postinstall": "flowbite-react patch"
